# facterpy

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
facter/: __init__.py
tests/: test_facter.py  test_integration.py
